# ff-web

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  config.yaml2  fetch-static.sh  server-benchmark.sh  setup-environment.sh
.github/workflows/: docker-image.yml
cmake/: FindFFmpeg.cmake
css/: ff.css
html/: index.html
http/: create_topic.http  get_files.http  get_forwarders.http  get_profile.http  rate_forwarder.http  update_profile.http
include/: account_creation_status_enum.hpp  cache_manager.hpp  database.hpp  endpoint_handlers.hpp  ff.hpp  file_construct_struct.hpp  login_status_enum.hpp  profile_update_status_enum.hpp  retrieved_file_struct.hpp  scrypto.hpp  settings.hpp  static_exists.hpp  upload_status_enum.hpp  user_properties_struct.hpp  user_type_enum.hpp  wad_info.hpp
js/: ff.js
sh/: fetch-sharpii.sh  setup-environment.sh
src/: account_manager.cpp  av_io.cpp  config.cpp  database.cpp  dol.cpp  ff.cpp  main.cpp  path_handlers.cpp  post_handlers.cpp  scrypto.cpp  template_handler.cpp  upload_manager.cpp  wadinfo.cpp
